# up-client-mqtt5-python

./: .gitignore  README.adoc  README.md  pyproject.toml
.github/: ruff.toml
.github/workflows/: lint.yml  python-publish.yml
examples/: mqtt5_pub.py  mqtt5_sub.py
examples/docker_mosquitto/: docker-compose.yml
examples/docker_mosquitto/mosquitto/config/: mosquitto.conf
tests/: test_mqtt5_utransport.py  test_mqtt5_utransport_send.py
tests/testsupport/: broker.py  consts.py  debug_helpers.py  mqtt5_props.py  paho_test.py
up_client_mqtt5_python/: mqtt5_utransport.py
up_client_mqtt5_python/utils/: utils.py
